docs/v0.1.6/_sources/gallery/backtester.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/backtester.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_backtester.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_backtester.py:


Backtester Workflow Example
---------------------------

This example demonstrates a complete backtesting workflow using the TradeTide library.

.. GENERATED FROM PYTHON SOURCE LINES 8-55







.. code-block:: Python



    from TradeTide import Backtester, Strategy, Market, Currency, days, hours, minutes
    from TradeTide.indicators import BollingerBands
    from TradeTide import capital_management, exit_strategy

    market = Market()

    market.load_from_database(
        currency_0=Currency.CAD,
        currency_1=Currency.USD,
        time_span=100 * days,
    )

    indicator = BollingerBands(
        window=3 * minutes,
        multiplier=2.0
    )

    indicator.run(market)

    strategy = Strategy()

    strategy.add_indicator(indicator)

    exit_strategy = exit_strategy.Static(
        stop_loss=4,
        take_profit=4,
        save_price_data=True
    )

    capital_management = capital_management.FixedLot(
        capital=1_000_000,
        fixed_lot_size=10_000,
        max_capital_at_risk=100_000,
        max_concurrent_positions=100,
    )

    backtester = Backtester(
        strategy=strategy,
        exit_strategy=exit_strategy,
        market=market,
        capital_management=capital_management,
    )

    backtester.run()

    backtester.print_performance()

.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.964 seconds)


.. _sphx_glr_download_gallery_backtester.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: backtester.ipynb <backtester.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: backtester.py <backtester.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: backtester.zip <backtester.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
